K8/Istio/payment-deployment-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  template:
    spec:
      containers:
      - name: payment
